it was easier than i thought